--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       </nav>
 
       <div id="portfolio-container">
-        <img id="portfolio-picture" src="images/portfolio.jpg" />
+        <img id="portfolio-picture" src="images/IMG_9286.jpg"/>
       </div>
     </header>
     <main>
