--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </nav>
 
       <div id="portfolio-container">
-        <img id="portfolio-picture" src="images/portfolio.jpg" />
+        <img id="portfolio-picture" src="images/IMG_9286.jpg" />
       </div>
     </header>
     <main>
@@ -33,7 +33,7 @@
     </main>
     <div id="contact-container">
       <nav id="contact-links">
-        <a href="https://www.facebook.com/khoangaos33/" target="_blank">
+        <a href="https://www.facebook.com/xxtions.nhan/" target="_blank">
           <i class="fab fa-facebook-f fa-5x contact-link"></i>
         </a>
         <a
