--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
       <h1 id="greeting">Hey there !</h1>
 
       <div id="portfolio-container">
-        <img id="portfolio-picture" src="images/portfolio.jpg" />
+        <img id="portfolio-picture" src="images/IMG_9286.jpg" />
       </div>
     </header>
     <main>
       <div id="self-introduce-field">
         <h2 id="self-introduce-p">
-          I'm Vu Khoa. A Software Engineer student. And this is my Portfolio
-          Website
+          Hallo my madam!
         </h2>
       </div>
     </main>
