--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         <a class="nav-link" href="./contact.html">Contact</a>
       </nav>
       <div id="portfolio-container">
-        <img id="portfolio-picture" src="images/portfolio.jpg" />
+        <img id="portfolio-picture" src="images/IMG_9286.jpg" />
       </div>
     </header>
     <main>
