--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,12 @@
           <i class="fab fa-facebook-f fa-5x contact-link"></i>
         </a>
         <a
-          href="https://www.linkedin.com/in/v%C5%A9-anh-khoa-6181aa282/"
+          href="https://www.linkedin.com/in/nhan-huynh-b8ab67255/"
           target="_blank"
         >
           <i class="fa-brands fa-linkedin-in fa-5x contact-link"></i>
         </a>
-        <a href="https://github.com/VuKhoa23" target="_blank">
+        <a href="https://github.com/Dacoband" target="_blank">
           <i class="fa-brands fa-github fa-5x contact-link"></i>
         </a>
       </nav>
