--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
     <header id="title-field">
       <div id="nav-btn-container">
         <button id="nav-btn">
-          <i class="fas fa-align-justify fa-3x"></i>
+          <i class="fa fa-address-card fa-align-justify fa-3x"></i>
         </button>
       </div>
-      <nav class="nav-bar">
+      <nav class="nav-bar" style="background-color: blueviolet;">
         <a class="nav-link" href="./index.html">Home</a>
         <a class="nav-link" href="./about.html">About</a>
         <a class="nav-link" href="./projects.html">Projects</a>
