--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="title-field">
       <div id="nav-btn-container">
         <button id="nav-btn">
-          <i class="fas fa-align-justify fa-3x"></i>
+          <i style="color: black;" class="fa fa-address-card fa-align-justify fa-3x"></i>
         </button>
       </div>
       <nav class="nav-bar">
